# stm32-boilerplate

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
lib/openocd/: f0-nucleo.cfg  f0.cfg  f1-nucleo.cfg  f1.cfg  f3-nucleo.cfg  f3.cfg  g0-nucleo.cfg  g4-nucleo.cfg  l4-nucleo.cfg
lib/trig/: sine-table.h  trig.h
src/: target-mcu.cmake
src/example/adc/: main.c
src/example/adc-continuous/: CMakeLists.txt  main.c
src/example/adc-sw-trigger/: main.c
src/example/adc-wwdg/: main.c
src/example/blink/: CMakeLists.txt  main.c
src/example/button-exti/: CMakeLists.txt  main.c
src/example/dac/: CMakeLists.txt  main.c
src/example/dac-chirp/: main.c
src/example/neopixel/: CMakeLists.txt  main.c
src/example/opamp-internal/: CMakeLists.txt  main.c
src/example/pwm-commutate/: main.c
src/example/pwm-input/: CMakeLists.txt  main.c
src/example/pwm-output/: main.c
src/example/pwm-output-dma/: main.c
src/link/: generate-ldscript.py
tools/: README.md  build-all.sh  clang-format.sh  generate-nvic-all.sh  generate-sine-table.py  package-deployment.sh  travis-ci-script.sh
